# asteria

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.blockchain.yml  docker-compose.yml
.github/workflows/: ci.yml
deploy/comet/: Dockerfile.abci  genesis-app-state.json  init-testnet.sh
deploy/comet/windows/: Backup-Localnet.ps1  Get-LocalnetStatus.ps1  Initialize-Localnet.ps1  Install-CometBft.ps1  Localnet.Backup.Common.ps1  Localnet.Common.ps1  README.md  Restore-Localnet.ps1  Start-Localnet.ps1  Stop-Localnet.ps1  Test-BackupRestore.ps1  Test-LocalnetScripts.ps1
docs/: PRIVACY_PERFORMANCE.md  benchmark.md
src/: account.rs  api.rs  auth.rs  batch_auction.rs  chain_tx.rs  consensus.rs  dkg_ceremony.rs  dkg_transport.rs  domain.rs  engine.rs  error.rs  event.rs  lib.rs  node.rs  orderbook.rs  private_market.rs  private_order.rs  private_protocol.rs  shielded_margin.rs  shielded_protocol.rs  state_commitment.rs  state_sync.rs  store.rs  threshold_dkg.rs  viewing_key.rs  zk_batch.rs  zk_circuit.rs
tests/: persistence.rs
