[package]
name = "asteria"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A deterministic perpetual DEX application-chain prototype"

[lib]
name = "asteria"
path = "src/lib.rs"

[features]
default = []
# Experimental only: this module contains a toy Halo2 circuit and is not wired
# into consensus or the production shielded-ledger verifier.
zk-circuit = ["dep:halo2_gadgets", "dep:halo2_proofs"]

[[bin]]
name = "asteria-node"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
curve25519-dalek = { version = "4.1", features = ["digest", "zeroize"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
frost-ristretto255 = "3.0"
halo2_gadgets = { version = "=0.5.0", default-features = false, optional = true }
halo2_proofs = { version = "=0.3.2", default-features = false, optional = true }
hex = "0.4"
hkdf = "0.12"
imbl = { version = "7", features = ["serde"] }
jmt = { version = "0.12", default-features = false, features = ["std", "sha2"] }
parking_lot = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.11"
redb = "2.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
rust_decimal_macros = "1.37"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tendermint = "0.40.4"
tendermint-rpc = { version = "0.40.4", features = ["http-client"] }
tower = { version = "0.5", features = ["buffer", "limit", "load-shed", "util"] }
tower-abci = "0.19.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1.8"

[dev-dependencies]
proptest = "1.6"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
] }

[profile.release]
lto = "thin"
codegen-units = 1
